samples/_failures_safe/1761300736_bc626a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6aef7613.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_6aef7613.c:172:17: error: expected expression at end of input
  172 |                 return
      |                 ^~~~~~
./samples/SAFE/__tmp_6aef7613.c:172:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6aef7613.c:172:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6aef7613.c:172:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6aef7613.c:172:17: error: expected declaration or statement at end of input
